manifests/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app
spec:
  containers:
    - name: app
      image: 110y/kubernetes-hands-on:072737f
