manifests/service-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: NodePort
  selector:
    tier: backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
