manifests/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: app
              servicePort: 8080
